--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3308/testapp
+spring.datasource.username=root
+spring.datasource.password=helloworld
