--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3308/testapp
 spring.datasource.username=root
 spring.datasource.password=helloworld
+
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
