--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3308/testapp
 spring.datasource.username=root
 spring.datasource.password=helloworld
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
