--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-server.port=8081
+server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3308/testapp
 spring.datasource.username=root
 spring.datasource.password=helloworld
 
+# this may need additional tweaking - spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
